--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="cv">
             <h2>CV-ul Meu</h2>
             <p>Descărcați CV-ul meu în format EuroPass:</p>
-            <a href="cv/CV_EuroPass.pdf" download>Descarcă CV</a>
+            <a href="cv/cv.proiectinfowebsite" download>Descarcă CV</a>
         </section>
 
         <!-- Formular de contact -->
